fix syntax error in job gitlab ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ before_script:
   - apt-get upgrade -yqq
   - apt-get install libncurses5-dev gcc make git exuberant-ctags bc libssl-dev -yqq
 
-build:linuxrc
+build:linuxrc:
   script:
     - make defconfig
     - make -j4
