--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ build:fedora:
   before_script:
   - dnf check-update
   - dnf update -y
-  - dnf install flex bison elfutils-libelf-devel openssl-devel -yqq
+  - dnf install flex bison elfutils-libelf-devel openssl-deve -y
   script:
   - make defconfig
   - make -j4
