--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,8 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: dependency
-    - run: apt-get install libncurses5-dev gcc make git exuberant-ctags bc libssl-dev libelf-dev bison flex bsdmainutils rsync -yqq
-    - name: configure
-      run: make defconfig
-    - name: make
-      run: make -j4
+    - run: |
+        apt-get install libncurses5-dev gcc make git exuberant-ctags bc libssl-dev libelf-dev bison flex bsdmainutils rsync -yqq
+        time make defconfig
+        time make -j4
